<resources>
    <string name="app_name">设计明星</string>
    <string name="sheet_dialog_cancel">取消</string>
    <string name="complete">确认</string>
    <string name="exit_login">退出登录</string>
    <string name="sheet_dialog_cancel_batal">取消</string>
    <string name="go_to_setting">手动设置</string>
    <string name="login_hint">请输入手机号</string>
    <string name="next_step">下一步</string>
    <string name="wel_regi">欢迎注册</string>
    <string name="login">登录</string>
    <string name="pwd_hint">输入密码</string>
    <string name="for_pwd">忘记密码</string>
    <string name="regi">注册</string>
    <string name="other_login">其他方式登录</string>
    <string name="complete_phone">填写你的手机号码</string>
    <string name="com_code">请填写验证码</string>
    <string name="pwd_err">密码不能为空</string>
    <string name="pwd_err2">密码不能低于6位数</string>
    <string name="phone_err">电话不能为空</string>
    <string name="home">首页</string>
    <string name="desinger">设计师</string>
    <string name="message_main">消息</string>
    <string name="me">我的</string>
    <string name="no_phone">请填写正确的手机号</string>
    <string name="com_pwd">填写你的密码</string>
    <string name="sure">确认</string>
    <string name="com_nwe_pwd">填写你的新密码</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guanzhu">关注</string>
    <string name="tuijian">推荐</string>
    <string name="find">发现</string>
    <string name="nikename_hint">请输入昵称</string>
    <string name="brth">出生年月日</string>
    <string name="com_info">完善信息</string>
    <string name="com_info2">完善信息有利于交流哦！</string>
    <string name="back">取消</string>
    <string name="open_camera">打开相机</string>
    <string name="open_album">打开相册</string>
    <string name="get_photo_fail">获取照片失败</string>
    <string name="name_err">名字不能为空</string>
    <string name="birth_err">生日不能为空</string>
    <string name="around">周围</string>
    <string name="activitys">活动</string>
    <string name="sixin">私信</string>
    <string name="zuopingnum">作品</string>
    <string name="getlike">获赞数</string>
    <string name="fans">粉丝数</string>
    <string name="my_zp">我的作品</string>
    <string name="my_dt">我的动态</string>
    <string name="be_designer">成为设计师</string>
    <string name="my_shdesigner">审核设计师</string>
    <string name="my_shemanger">设计师管理</string>
    <string name="my_seeting">设置</string>
    <string name="my_black">黑名单</string>
    <string name="my_seeting2">个人设置</string>
    <string name="hand">头像</string>
    <string name="my_name">姓名</string>
    <string name="my_sex">性别</string>
    <string name="my_brith">生日</string>
    <string name="my_city">地址</string>
    <string name="my_sing">个人签名</string>
    <string name="login_out">退出登录</string>
    <string name="log_out_success">退出成功</string>
    <string name="no_birth">未设定</string>
    <string name="city_err">选择地址</string>
    <string name="name_hite">请输入名字</string>
    <string name="chang_name">修改名字</string>
    <string name="change_sin">修改签名</string>
    <string name="no_city">请选择地址</string>
    <string name="no_sing">未设置</string>
    <string name="guss_like">猜你喜欢</string>
    <string name="zp">作品</string>
    <string name="dt">动态</string>
    <string name="all_message">全部消息</string>
    <string name="pl_message">评论</string>
    <string name="zan_message">赞</string>
    <string name="message">通知</string>
    <string name="my_fans">粉丝</string>
    <string name="shuishoupai">随手拍</string>
    <string name="fazp">发作品</string>
    <string name="cancel">取消</string>
    <string name="photo">照片</string>
    <string name="all">全部</string>
    <string name="confirm">确认</string>

    <string name="image_picker">图片选择器</string>
    <string name="scanner_image">S...</string>
    <string name="select_image_max">最多 %1$d 张</string>
    <string name="confirm_msg">%1$d/%2$d</string>
    <string name="image_num">%d张</string>
    <string name="scanner_image_no_found">没有图片</string>
    <string name="all_media">全部</string>
    <string name="all_video">所有视频</string>
    <string name="take_photo">拍摄图片</string>
    <string name="permission_tip">当前没有读取存储卡或摄像头权限</string>
    <string name="image_select">选择</string>
    <string name="single_type_choose">不能同时选择图片与视频</string>
    <string name="next">下一步</string>
    <string name="quan">全部</string>
    <string name="your_review">写标题并使用合适的话题，能让更多人看到～（100字以内）</string>
    <string name="where">您在哪里？</string>
    <string name="bq">选择标签</string>
    <string name="repay">全部评论</string>
    <string name="no_reply">还没有评论</string>
    <string name="send">发送</string>
    <string name="review_i">添加你的评论</string>
    <string name="reply_empty">请填写内容</string>
    <string name="chose">滑动Bar来选择封面</string>
    <string name="no_designer">您还不是设计师不能发作品，请前去申请。。</string>
    <string name="sheet_dialog_ok">去申请</string>
    <string name="designering">正在审核你的资料,请稍后...</string>
    <string name="designerfalse">您的资料审核失败，请前去查看原因</string>
    <string name="go_look">前去查看</string>
    <string name="your_resons">请填写您的拒绝理由</string>
    <string name="cancle_designer">"去解雇"</string>
    <string name="no_address">缺少定位权限，请前去设置中心开启</string>
    <string name="addtags">新增标签</string>
    <string name="no_phonto">你没有授权获取手机基本信息权限，会影响部分功能多的使用。</string>
    <string name="share">分享微信</string>
    <string name="ok">更新</string>
    <string name="sign">升级</string>
    <string name="version">您的版本现在太低，请更新以便使用</string>
    <string name="notice">温馨提示</string>
    <string name="real_name">真实姓名</string>
    <string name="plsce_ent">请填写</string>
    <string name="com_name">所在公司</string>
    <string name="job_name">职务</string>
    <string name="com_err">公司名称不能为空</string>
    <string name="job_err">职位不能为空</string>
    <string name="phone">手机</string>
    <string name="delete_review">删除</string>
    <string name="jubao_review">举报</string>
    <string name="my_advise">意见反馈</string>
    <string name="you_feedback">反馈意见</string>
    <string name="write">填写你的反馈意见</string>
    <string name="commit">提交</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_err">意见为空</string>
    <string name="my_clear">清除缓存</string>
    <string name="cancle_clear">确认</string>
    <string name="like">点赞</string>
    <string name="search">搜索你想要的位置</string>
    <string name="search2"> 搜索设计师，头衔</string>
    <string name="mapchose">图片</string>
    <string name="vedio">视频</string>
    <string name="real_phone">联系方式</string>
    <string name="lainxi">联系方式</string>

</resources>