<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/theme_color"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/suishoupai"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <TextView
            android:textColor="@color/edit_color"
            android:textSize="16dp"
            android:gravity="center"
            android:text="@string/shuishoupai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:textColor="@color/hint_color"
            android:textSize="13dp"
            android:text="视频时长不超过1分钟"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:background="@color/background_color"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"></View>
    <LinearLayout
        android:id="@+id/zp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <TextView
            android:textColor="@color/edit_color"
            android:textSize="16dp"
            android:gravity="center"
            android:text="@string/fazp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:textColor="@color/hint_color"
            android:textSize="13dp"
            android:text="视频时长不超过20分钟"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:background="@color/background_color"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"></View>

    <TextView
        android:id="@+id/cancel"
        android:textColor="@color/edit_color"
        android:textSize="16dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
</LinearLayout>