<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/theme_color"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fm.designstar.views.login.activitys.LoginActivity">
    <RelativeLayout
        android:id="@+id/re_top"
        android:background="@mipmap/login_bg"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <ImageView
            android:id="@+id/back"
            android:layout_centerVertical="true"
            android:src="@mipmap/back"
            android:layout_width="40dp"
            android:layout_height="50dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_phone"
        android:layout_below="@+id/re_top"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/btn_round_huise_shape"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView

            android:paddingLeft="@dimen/sobot_20PX"

            android:textColor="@color/edit_color"
            android:id="@+id/phone_"
            android:layout_centerVertical="true"
            android:textSize="18dp"
            android:text="+86"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:textColor="@color/edit_color"
            android:text="17621678780"
            android:id="@+id/phone"
            android:maxLength="12"
            android:inputType="number"
            android:layout_marginLeft="@dimen/sobot_10PX"
            android:layout_toRightOf="@+id/phone_"
            android:background="@null"
            android:paddingLeft="@dimen/sobot_10PX"
            android:hint="@string/login_hint"
            android:layout_width="match_parent"
            android:layout_height="54dp"></EditText>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/re_password"
        android:layout_below="@+id/re_phone"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/btn_round_huise_shape"
        android:layout_marginTop="@dimen/sobot_20PX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText

            android:id="@+id/pwd"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/sobot_10PX"
            android:text="qianshide"
            android:background="@null"
            android:paddingLeft="@dimen/sobot_10PX"
            android:hint="@string/pwd_hint"
            android:layout_width="match_parent"
            android:layout_height="54dp"></EditText>
        <ImageView
            android:layout_marginRight="@dimen/sobot_20PX"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/close"
            android:layout_width="26dp"
            android:layout_height="wrap_content"></ImageView>
    </RelativeLayout>
    <TextView
        android:id="@+id/longin"
        android:layout_below="@+id/re_password"
        android:layout_marginTop="@dimen/sobot_20PX"
        android:layout_marginLeft="40dp"
        android:paddingLeft="@dimen/sobot_10PX"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:text="@string/login"
        android:background="@drawable/btn_round_huise2_shape"
        android:layout_width="match_parent"
        android:layout_height="54dp"/>
    <RelativeLayout
        android:id="@+id/re_to"
        android:layout_marginTop="@dimen/sobot_20PX"
        android:layout_below="@+id/longin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/forgot"
            android:textSize="14dp"
            android:layout_marginLeft="@dimen/sobot_40PX"
            android:text="@string/for_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
        <TextView
            android:id="@+id/regist"
            android:textSize="14dp"
            android:layout_marginRight="@dimen/sobot_40PX"
            android:layout_alignParentEnd="true"
            android:textColor="@color/notice"
            android:text="@string/regi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
    </RelativeLayout>


        <TextView
            android:layout_marginTop="50dp"
            android:layout_below="@+id/re_to"
            android:id="@+id/tv_other"
            android:layout_centerHorizontal="true"
            android:textSize="14dp"
            android:text="@string/other_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
    <RelativeLayout
        android:layout_marginTop="@dimen/sobot_20PX"
        android:gravity="center"
        android:layout_below="@+id/tv_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/wx"
            android:src="@mipmap/wx"
            android:layout_width="44dp"
            android:layout_height="44dp"></ImageView>

        <ImageView
            android:layout_marginLeft="50dp"
            android:id="@+id/qq"
            android:layout_toRightOf="@+id/wx"
            android:src="@mipmap/qq"
            android:layout_width="44dp"
            android:layout_height="44dp"></ImageView>

    </RelativeLayout>

    <TextView
        android:id="@+id/long_notice"
        android:layout_marginLeft="@dimen/sobot_20PX"
        android:layout_marginRight="@dimen/sobot_20PX"
        android:gravity="center"
        android:layout_marginBottom="@dimen/sobot_20PX"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="登录即表示同意中国设计星的《用户服务协议》与《隐私政策》"
        android:textColor="#FF666666"
        android:textSize="12dp"
        />
</RelativeLayout>