<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/theme_color"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fm.designstar.views.login.activitys.RegisteredActivity">
    <RelativeLayout
        android:id="@+id/re_top"
        android:background="@mipmap/login_bg"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <ImageView
            android:id="@+id/back"
            android:layout_centerVertical="true"
            android:src="@mipmap/back"
            android:layout_width="40dp"
            android:layout_height="50dp"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/login_top"
        android:layout_marginTop="@dimen/sobot_10PX"
        android:layout_below="@+id/re_top"
        android:textSize="24dp"
        android:textColor="@color/edit_color"
        android:gravity="center"
        android:text="@string/wel_regi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:id="@+id/re_phone"
        android:layout_below="@+id/login_top"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/btn_round_huise_shape"
        android:layout_marginTop="@dimen/sobot_20PX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView

            android:paddingLeft="@dimen/sobot_20PX"

            android:textColor="@color/edit_color"
            android:id="@+id/phone_"
            android:layout_centerVertical="true"
            android:textSize="18dp"
            android:text="+86"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:id="@+id/phone"
            android:layout_marginLeft="@dimen/sobot_10PX"
            android:layout_toRightOf="@+id/phone_"
            android:background="@null"
            android:paddingLeft="@dimen/sobot_10PX"
            android:hint="@string/login_hint"
            android:layout_width="match_parent"
            android:layout_height="54dp"></EditText>
    </RelativeLayout>

    <TextView
        android:id="@+id/next"
        android:layout_below="@+id/re_phone"
        android:layout_marginTop="@dimen/sobot_20PX"
        android:layout_marginLeft="40dp"
        android:paddingLeft="@dimen/sobot_10PX"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:text="@string/next_step"
        android:background="@drawable/btn_round_huise2_shape"
        android:layout_width="match_parent"
        android:layout_height="54dp"/>

    <TextView
        android:id="@+id/reg_notice"
        android:layout_marginLeft="@dimen/sobot_20PX"
        android:layout_marginRight="@dimen/sobot_20PX"
        android:gravity="center"
        android:layout_marginBottom="@dimen/sobot_20PX"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="登录即表示同意中国设计星的《用户服务协议》与《隐私政策》"
        android:textColor="#FF666666"
        android:textSize="12dp"
        />
</RelativeLayout>